--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,21 +1,27 @@
+@import "../../style/common.wxss";
+
 /**index.wxss**/
-.userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.home-content {
+  padding: 30rpx 40rpx 0;
+  text-align: center;
 }
 
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
+.logo-bg {
+  width: 100%;
 }
 
-.userinfo-nickname {
-  color: #aaa;
+.logo-drawlots {
+  width: 400rpx;
+  height: 480rpx;
+  margin-top: -100rpx;
+  display: none;
 }
 
-.usermotto {
-  margin-top: 200px;
+.logo-drawlots.show {
+  display: inline-block;
+}
+
+.drawlots-btn {
+  margin-top: -50rpx;
+  width: 400rpx;
 }
