--- a/pages/pigs/index.wxml
+++ b/pages/pigs/index.wxml
@@ -3,7 +3,7 @@
     <canvas canvas-id="J-pig-canvas" 
       style=" width: {{ initImgWid * imgScale }}px; height: {{ initImgHei * imgScale }}px; "></canvas>
 
-    <view>
+    <view class="btn-list">
       <button class="btn-style" bindtap="generateImage">保存图片</button>
       <button open-type="share" class="btn-style">跟朋友炫耀下</button>
     </view>
